fix: scrollbar style on firefox in slider

--- a/src/blocks/Slider/index.module.scss
+++ b/src/blocks/Slider/index.module.scss
@@ -60,6 +60,7 @@
 }
 
 .sliderTrack {
+  scrollbar-width: none;
   &::-webkit-scrollbar-track {
     display: none;
   }
